--- a/durak.cabal
+++ b/durak.cabal
@@ -11,9 +11,11 @@ executable durak
                    QuickCheck >=2.7.3 && <2.8
   ghc-options:     -Wall
   hs-source-dirs:  src
+  other-modules:   GameEngine
 
 test-suite Test
   type:            exitcode-stdio-1.0
   build-depends:   base >= 4, QuickCheck
   hs-source-dirs:  test src
   main-is:         Tests.hs
+  other-modules:   GameEngine
