Added a human-controlled player; continuing the implementation of the interactive game

--- a/durak.cabal
+++ b/durak.cabal
@@ -8,14 +8,19 @@ executable durak
   main-is:         Main.hs
   build-depends:   
                    base >= 4,
-                   QuickCheck >=2.7.3 && <2.8
+                   QuickCheck >=2.7.3 && <2.8,
+                   random >=1.0.1 && <1.1
   ghc-options:     -Wall
   hs-source-dirs:  src
-  other-modules:   GameEngine
+  other-modules:   
+                   GameEngine,
+                   HumanPlayer
 
 test-suite Test
   type:            exitcode-stdio-1.0
   build-depends:   base >= 4, QuickCheck
   hs-source-dirs:  test src
   main-is:         Tests.hs
-  other-modules:   GameEngine
+  other-modules:   
+                   GameEngine,
+                   HumanPlayer
