--- a/durak.cabal
+++ b/durak.cabal
@@ -9,7 +9,8 @@ executable durak
   build-depends:   
                    base >= 4,
                    QuickCheck >=2.7.3 && <2.8,
-                   random >=1.0.1 && <1.1
+                   random >=1.0.1 && <1.1,
+                   containers >=0.5.0 && <0.6
   ghc-options:     -Wall
   hs-source-dirs:  src
   other-modules:   
@@ -18,7 +19,9 @@ executable durak
 
 test-suite Test
   type:            exitcode-stdio-1.0
-  build-depends:   base >= 4, QuickCheck
+  build-depends:   
+                   base >= 4, QuickCheck,
+                   containers >=0.5.0 && <0.6
   hs-source-dirs:  test src
   main-is:         Tests.hs
   other-modules:   
